kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
  labels:
    owner: platform
